style(flat-components): prevent overflow (#2113)

--- a/desktop/renderer-app/src/index.less
+++ b/desktop/renderer-app/src/index.less
@@ -5,4 +5,5 @@ body,
 .flat-theme-root {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
